# gardentime

./: .gitignore  API_COMPLETE_SUMMARY.md  API_DATA_ANALYSIS.md  API_IMPLEMENTATION_STATUS.md  ARCHITECTURE_CLARIFICATION.md  BROWSER_VERIFICATION.md  COMPREHENSIVE_DATA_MODEL.md  DATABASE_SCHEMA_COMPLETE.md  FRONTEND_FIXES_SUMMARY.md  FRONTEND_INTEGRATION_SUMMARY.md  HELP.md  IMPLEMENTATION_SUMMARY.md  IMPORT_STATUS.md  PLANT_DATA_ANALYSIS.md  PLANT_DATA_API_INTEGRATION.md  PLANT_DATA_CLIENT_IMPLEMENTATION.md  README.md  ROTATION_PLANNER_FIX.md  ROTATION_PLANNER_FRONTEND_FIXES.md  ROTATION_PLANNER_FRONTEND_PLAN.md  ROTATION_PLANNER_FRONTEND_STATUS.md  ROTATION_PLANNER_IMPLEMENTATION_SUMMARY.md  ROTATION_PLANNER_TODO.md  SEASON_PLANNER_FIXES.md  SEASON_PLANNER_UX_IMPROVEMENTS.md  build.gradle.kts  data.sql  docker-compose.yml  package-lock.json  settings.gradle.kts  test-plant-api.sh  test-plant-data-security.sh  test_rotation_planner.sh
.github/: copilot-instructions.md
AI_DOCS/: API_ARCHITECTURE_ANALYSIS.md  API_ARCHITECTURE_REVIEW.md  API_ARCHITECTURE_SUMMARY.md  API_SECURITY_IMPLEMENTATION.md  API_STATUS_ACTUAL.md  ARCHITECTURE_CLARIFICATION_SUMMARY.md  ARCHITECTURE_REVIEW_AND_FIXES.md  BACKEND_TECHNICAL_DEBT_PLAN.md  CANVAS_PERFORMANCE_OPTIMIZATION_PLAN.md  CLIMATE_UPDATE_FIX.md  COMPANION_IMPORT_COMPLETE.md  DEV_MODE.md  README.md  (+30 more)
climate-data/: .gitignore  README.md  add_gdd_curves.py  add_grow_days.py  backfill_elevation.py  build.py  check_frost_auth.py  pyproject.toml
climate-data/climate_data/: config.py  frost.py  frost_api.py  postnummer.py  stations.py
(+860 files in other folders)
