[project]
name = "climate-data"
version = "0.1.0"
description = "Build static climate JSON assets for the MyGarden app"
requires-python = ">=3.11"
dependencies = [
    "xarray>=2024.0",
    "netCDF4>=1.6",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyproj>=3.6",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["climate_data"]
